--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -7,7 +7,6 @@ html {
   background-repeat: no-repeat;
   font-size: 1em;
   height: 100%;
-  scroll-behavior: smooth;
 }
 
 /*
@@ -68,4 +67,9 @@ ol,
 li {
   margin: 0;
   padding: 0;
+}
+
+a[href^="tel"] {
+  color: inherit;
+  text-decoration: none;
 }
