--- a/assets/css/_components.scss
+++ b/assets/css/_components.scss
@@ -332,6 +332,7 @@
 .category-tile {
   display: inline-block;
   text-transform: uppercase;
+  letter-spacing: 0.1em;
   color: $white;
   background-color: $black;
   padding: 0.3em 0.75em 0.15em;
