--- a/assets/css/_services.scss
+++ b/assets/css/_services.scss
@@ -5,11 +5,11 @@
   width: 1.25rem;
   height: 1.25rem;
   border-radius: 50%;
-  border: 0.15em solid;
+  border: 4px solid;
   background-color: blue;
   transition-property: background-color, transform, left, top;
   transition-duration: 0.25s, 0.25s, 0.5s, 0.5s;
-  transform: scale(0.25);
+  transform: scale(0.33);
 
   @each $key, $val in $colors {
     &.is-#{"" + $key} {
@@ -35,5 +35,11 @@
     .service-carousel-hidable-text {
       opacity: 1
     }
+  }
+}
+
+.q-md-pt-7-5 {
+  @media #{$query-md} {
+    padding-top: 5rem;
   }
 }
