--- a/_includes/home-circles.html
+++ b/_includes/home-circles.html
@@ -117,7 +117,7 @@
     id="USER RESEARCH"
     transform="translate(152.5 410)"
     opacity="0"
-    fill="#eec000"
+    fill="#D3AA00"
     data-keyframes="
       -1:opacity=0,translateX=152.5,translateY=410
       0:opacity=0,translateX=152.5,translateY=410
@@ -156,7 +156,7 @@
     if="COACHING"
     transform="translate(340 410)"
     opacity="0"
-    fill="#87C745"
+    fill="#79AD3D"
     data-keyframes="
       -1:opacity=0,translateX=340,translateY=410
       0:opacity=0,translateX=340,translateY=410
