--- a/_layouts/job.html
+++ b/_layouts/job.html
@@ -26,16 +26,19 @@ layout: default
   </div>
   <div class="absolute inset-x bottom-0 col align-center pb-5 hide-lg">
     <a class="button-text is-blue hide-lg" href="#next">
-      <div class="row align-center sp-3">
+    <div class="col sp-3 align-center hide-lg">
+      <a class="button-text" href="#next">
+        {{_.learn_more}}
+      </a>
+      <a class="button-text" href="#next">
         {% asset icons/icon-arrow-down.svg @inline %}
-        <div>{{_.learn_more}}</div>
-      </div>
-    </a>
+      </a>
+    </div>
   </div>
 </div>
 
-<div id="next" class="col align-center px-4 py-7 pt-8">
-  <div class="maxwidth-4 width-full col sp-4 pt-6">
+<div id="next" class="col align-center px-4 py-7 pt-8 q-lg-pt-2">
+  <div class="maxwidth-4 width-full col sp-4 pt-6 q-lg-pt-0">
     <h2 class="font-heading text-xxl q-md-text-xl">{{page.second_headline}}</h2>
     <div class="markdown text-sm">{{page.second_paragraph | markdownify}}</div>
   </div>
