--- a/assets/css/_components.scss
+++ b/assets/css/_components.scss
@@ -145,6 +145,10 @@
   font-family: inherit;
   font-size: $font-size-xs;
 
+  @media #{$query-md} {
+    font-size: 1rem; // to prevent iPhone zoom
+  }
+
   border-bottom: 2px solid $black;
   padding: 0.6rem 0 0.5rem;
 
@@ -289,7 +293,8 @@
   }
 }
 
-.d-labs-list, .markdown > ul {
+.d-labs-list,
+.markdown > ul {
   list-style: none;
   padding-left: 1.5em;
   > li {
@@ -354,7 +359,7 @@
 }
 
 .whatsapp-container {
-  background-color: #60D66A;
+  background-color: #60d66a;
   border: 2px solid #fff;
   padding: 8px;
 }
