--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,4 +5,12 @@
   {% asset style.css %}
   {% asset scripts.js %}
   {% seo %}
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-46146953-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-46146953-1', { 'anonymize_ip': true });
+  </script>
 </head>
