--- a/_layouts/job.html
+++ b/_layouts/job.html
@@ -11,7 +11,7 @@ layout: default
     </div>
     <div class="q-lg-width-full col fill-parent">
       <div class="width-full sp-4 pl-6 col fill-parent maxwidth-4 q-lg-maxwidth-6 q-lg-px-4">
-        {% locale_link jobs class:"button-text" %}
+        {% locale_link jobs class:"button-text" hash:"list"%}
           ← {{_.back_button_label}}
         {% endlocale_link %}
         <div class="push"></div>
