--- a/_layouts/method.html
+++ b/_layouts/method.html
@@ -16,7 +16,7 @@ layout: default
 				</div>
 			</div>
 			<div class="col align-start pt-6">
-				{% locale_link services class:"button-text" %}
+				{% locale_link services class:"button-text" hash:"list" %}
 				← {{_.back_button_text}}
 				{% endlocale_link %}
 			</div>
