--- a/assets/css/_services.scss
+++ b/assets/css/_services.scss
@@ -22,6 +22,11 @@
     background-color: transparent;
     transform: scale(1)
   }
+
+  .button-ghost & {
+    position: relative;
+    top: -0.1rem;
+  }
 }
 
 
