added first chunk of images

--- a/_includes/pages/jobs.html
+++ b/_includes/pages/jobs.html
@@ -2,9 +2,16 @@
 {% assign job_pages = site.pages | where: "kind", "jobPosting" | where: "locale", page.locale %}
 
 <div class="height-screen text-white relative col justify-center align-center px-4 py-5">
-  <div class="absolute inset-full bg-blue" data-image-fader>
-    {% asset about.jpg class="absolute inset-full"%}
-    {% asset jobs-portrait.jpg class="absolute inset-full"%}
+  <div class="absolute inset-full bg-blue" data-image-fader>   
+    {% asset dlabs_jobs-slider-2.jpg class="absolute inset-full"%}
+    {% asset dlabs_jobs-slider-3.jpg class="absolute inset-full"%}
+    {% asset dlabs_jobs-slider-4.jpg class="absolute inset-full"%}
+    {% asset dlabs_jobs-slider-5.jpg class="absolute inset-full"%}
+    {% asset dlabs_jobs-slider-6.jpg class="absolute inset-full"%}
+    {% asset dlabs_jobs-slider-7.jpg class="absolute inset-full"%}
+    {% asset dlabs_jobs-slider-8.jpg class="absolute inset-full"%}
+    {% asset dlabs_jobs-slider-9.jpg class="absolute inset-full"%}
+    {% asset dlabs_jobs-slider-10.jpg class="absolute inset-full"%}
   </div>
 
   <div class="font-heading text-xxxl q-md-text-xl maxwidth-7 width-full relative zindex-3">{{_.title_text | markdownify}}</div>
