added new slider images

--- a/_includes/pages/jobs.html
+++ b/_includes/pages/jobs.html
@@ -11,7 +11,7 @@
     {% asset dlabs_jobs-slider-7.jpg class="absolute inset-full hidden"%}
     {% asset dlabs_jobs-slider-8.jpg class="absolute inset-full hidden"%}
     {% asset dlabs_jobs-slider-9.jpg class="absolute inset-full hidden"%}
-    {% asset IMG_1407.jpg class="absolute inset-full"%}
+    {% asset dlabs_jobs-slider-10.jpg class="absolute inset-full"%}
   </div>
 
   <!-- last image should not be hidden, because it is shown first -->
