added image source for projects

--- a/_includes/pages/approach.html
+++ b/_includes/pages/approach.html
@@ -146,6 +146,10 @@
                 {%- endfor -%}
               </ul>
             </div>
+
+            <div class="approach-project-image_source">
+              {{project.image_source}}
+            </div>
           </div>
         </div>
       </div>
