left aligned location images

--- a/_includes/pages/about.html
+++ b/_includes/pages/about.html
@@ -47,7 +47,7 @@
         <div class="row sp-3 q-lg-col fill-parent q-lg-sp-7">
           {%- for location in site.data.includes.locations.locations -%}
             <div class="col sp-5 fill-parent q-lg-sp-2">
-              <div class="col align-center q-lg-pb-4">
+              <div class="col align-start q-lg-pb-4">
                 {% asset {{location.img}}
                   srcset:width="400"
                   srcset:width="200"
