fixed images in slider on mobile

--- a/_includes/pages/services.html
+++ b/_includes/pages/services.html
@@ -54,7 +54,7 @@
           <div class="width-full no-shrink px-4" >
             <div class="row sp-4 q-md-col q-md-align-center">
               <div class="width-1_3 no-shrink q-md-width-full">
-                {% asset {{slide.img}} class="width-full q-md-height-8"%}
+                {% asset {{slide.img}} class="width-full q-md-height-8 {{slide.img-position}}" %}
               </div>
               <div class="markdown px-4 q-md-text-xs">{{slide.text}}</div>
             </div>
