fixed mobile job teaser image

--- a/_includes/pages/home.html
+++ b/_includes/pages/home.html
@@ -140,7 +140,7 @@
 
 <div class="bg-white row q-md-col relative zindex-1">
   <div class="width-1_2 relative minheight-9 q-md-width-full">
-    {% asset {{_.jobs_image}} class="absolute inset-full"%}
+    {% asset {{_.jobs_image}} class="absolute inset-full home-jobs-img "%}
   </div>
   <div class="width-1_2 q-md-width-full">
     <div class="py-8 pl-6 pr-4 maxwidth-10 col sp-3">
